--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         
           </div>
           <div id="conclusion"><p>I have tested 4 images</p><br>
-            <p><b>GOOGLE LENS</b> have predicted 4 of them more accurately. And <b>MOBILENET </b>was less accurately</p></div>
+            <p><b>GOOGLE LENS</b> have predicted 4 of them more accurately. And <b>MOBILENET </b>was less accurately.<br>
+            So according to my case study, GOOGLE LENS is more Accurate.
+            </p></div>
       
   
 </body>
