--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <center><p id="ka">Google Lens is more Accurate</p></center>
         
           </div>
-          <div id="conclusion"><p>I have tested 4 images</p><br>
+          <div id="conclusion"><p>I have tested 4 images</p>
             <p><b>GOOGLE LENS</b> have predicted 4 of them more accurately. And <b>MOBILENET </b>was less accurately.<br>
             So according to my case study, GOOGLE LENS is more Accurate.
             </p></div>
